Created uxwritingsamples page

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                         <div class="proj-text">
                             <div class="proj-title">Portfolio Website</div>
                             <p>Hey, it's my website! A simple static website made from scratch.</p>
-                            <a class="repo-btn" onclick="location.href='https://github.com/jennycpero/Portfolio-Website'">View in GitHub</a>
+                            <a class="repo-btn" onclick="location.href='https://github.com/jennycpero/Portfolio-Website'">View GitHub</a>
                         </div>
                     </div>
 
@@ -126,7 +126,7 @@
                         <div class="proj-text">
                             <div class="proj-title">Total</div>
                             <p>A console-style arithmetic game programmed in Python.</p>
-                            <a class="repo-btn" onclick="location.href='https://github.com/jennycpero/Total'">View in GitHub</a>
+                            <a class="repo-btn" onclick="location.href='https://github.com/jennycpero/Total'">View GitHub</a>
                         </div>
                     </div>
 
@@ -135,7 +135,7 @@
                         <div class="proj-text">
                             <div class="proj-title">Popeyes Locations Scraper</div>
                             <p>Web scrapes US Popeyes locations and compiles it into a csv file.</p>
-                            <a class="repo-btn" onclick="location.href='https://github.com/jennycpero/Popeyes-Locations'">View in GitHub</a>
+                            <a class="repo-btn" onclick="location.href='https://github.com/jennycpero/Popeyes-Locations'">View GitHub</a>
                         </div>
                     </div>
                 </div>
