Edit portfolio desc

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <!--Projects-->
         <div class="container-fluid py-2" id="projects">
             <h1 class="exp-proj-title">Portfolio</h1>
-                <h2>Click the "View in GitHub" button to view the code and/or dashboards for each project.</h2>
+                <h2>More projects coming soon.</h2>
                <div class="all-projects">
                     <div class="proj">
                         <img src="assets/portfolio-web.png" class="proj-pic">
