Started uxwritingsamples page, added card in index

--- a/index.html
+++ b/index.html
@@ -138,6 +138,15 @@
                             <a class="repo-btn" onclick="location.href='https://github.com/jennycpero/Popeyes-Locations'">View GitHub</a>
                         </div>
                     </div>
+
+                    <div class="proj">
+                        <!-- <img src="assets/UXWritingChallenge/Day 1 - Flight Cancellation.png" class="proj-pic"> -->
+                        <div class="proj-text">
+                            <div class="proj-title">UX Writing Challenge Samples</div>
+                            <p>My samples from the UX Writing Challenge, implemented in designs created with Figma.</p>
+                            <a class="repo-btn" onclick="location.href='uxwritingsamples.html'">View Samples</a>
+                        </div>
+                    </div>
                 </div>
 
         </div>
