Add ux sample photos, create temp title

--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
                     <div class="proj">
                         <!-- <img src="assets/UXWritingChallenge/Day 1 - Flight Cancellation.png" class="proj-pic"> -->
                         <div class="proj-text">
-                            <div class="proj-title">UX Writing Challenge Samples</div>
-                            <p>My samples from the UX Writing Challenge, implemented in designs created with Figma.</p>
+                            <div class="proj-title">UX Writing Samples</div>
+                            <p>My samples from the Daily UX Writing Challenge, with explanations and designs created with Figma.</p>
                             <a class="repo-btn" onclick="location.href='uxwritingsamples.html'">View Samples</a>
                         </div>
                     </div>
