Added more portfolio cards.

--- a/index.html
+++ b/index.html
@@ -107,48 +107,90 @@
 
         <span class="anchor" id="port"></span>
 
-        <!--Projects-->
-        <div class="container-fluid py-2" id="projects">
+        <!--Portfolio-->
+        <div class="container-fluid" id="projects">
             <h1 class="exp-proj-title">Portfolio</h1>
                 <h2>More projects coming soon.</h2>
-               <div class="all-projects">
+               <div class="all-projects my-5">
                     <div class="proj">
-                        <img src="assets/portfolio-web.png" class="proj-pic">
-                        <div class="proj-text">
-                            <div class="proj-title">Portfolio Website</div>
-                            <p>Hey, it's my website! A simple static website made from scratch.</p>
-                            <a class="repo-btn" onclick="location.href='https://github.com/jennycpero/Portfolio-Website'">View GitHub</a>
+                        <div class="proj-pic-main">
+                            <img src="assets/portfolio-web.png" class="proj-pic">
+                        </div>
+                        <div class="proj-pic-main">
+                            <div class="proj-text">
+                                <div class="proj-title">Portfolio Website</div>
+                                <p>Hey, it's my website! A simple static website made from scratch.</p>
+                                <a class="repo-btn" onclick="location.href='https://github.com/jennycpero/Portfolio-Website'">View GitHub</a>
+                            </div>
                         </div>
                     </div>
 
                     <div class="proj">
-                        <img src="assets/total-pic.png" class="proj-pic">
-                        <div class="proj-text">
-                            <div class="proj-title">Total</div>
-                            <p>A console-style arithmetic game programmed in Python.</p>
-                            <a class="repo-btn" onclick="location.href='https://github.com/jennycpero/Total'">View GitHub</a>
+                        <div class="proj-pic-main">
+                            <img src="assets/total-pic.png" class="proj-pic">
+                        </div>
+                        <div class="proj-pic-main">
+                            <div class="proj-text">
+                                <div class="proj-title">Total</div>
+                                <p>A console-style arithmetic game programmed in Python.</p>
+                                <a class="repo-btn" onclick="location.href='https://github.com/jennycpero/Total'">View GitHub</a>
+                            </div>
+                        </div>  
+                    </div>
+
+                    <div class="proj">
+                        <div class="proj-pic-main">
+                            <img src="assets/popeyes-pic.png" class="proj-pic">
+                        </div>
+                        <div class="proj-text-main">
+                            <div class="proj-text">
+                                <div class="proj-title">Popeyes Locations Scraper</div>
+                                    <p>Web scrapes US Popeyes locations and compiles it into a csv file.</p>
+                                    <a class="repo-btn" onclick="location.href='https://github.com/jennycpero/Popeyes-Locations'">View GitHub</a>
+                            </div>
                         </div>
                     </div>
 
                     <div class="proj">
-                        <img src="assets/popeyes-pic.png" class="proj-pic">
-                        <div class="proj-text">
-                            <div class="proj-title">Popeyes Locations Scraper</div>
-                            <p>Web scrapes US Popeyes locations and compiles it into a csv file.</p>
-                            <a class="repo-btn" onclick="location.href='https://github.com/jennycpero/Popeyes-Locations'">View GitHub</a>
+                        <div class="proj-pic-main">
+                            <img src="assets/Day 10 preview.png" class="proj-pic"> 
+                        </div>
+                        <div class="proj-text-main">
+                            <div class="proj-text">
+                                <div class="proj-title">UX Writing Samples</div>
+                                <p>Samples from the Daily UX Writing Challenge, with explanations and Figma mockups.</p>
+                                <a class="repo-btn" onclick="location.href='uxwritingsamples.html'">View Samples</a>
+                            </div>
+                        </div>
+                    </div>
+                
+                    <div class="proj">
+                        <div class="proj-pic-main">
+                            <img src="assets/techwritingpreview.png" style="border-bottom:2px solid black" class="proj-pic"> 
+                        </div>
+                        <div class="proj-text-main">
+                            <div class="proj-text">
+                                <div class="proj-title">Technical Writing Samples</div>
+                                <p>My technical writing samples.</p>
+                                <a class="repo-btn" onclick="location.href='uxwritingsamples.html'">View Samples</a>
+                            </div>
                         </div>
                     </div>
 
                     <div class="proj">
-                        <!-- <img src="assets/UXWritingChallenge/Day 1 - Flight Cancellation.png" class="proj-pic"> -->
-                        <div class="proj-text">
-                            <div class="proj-title">UX Writing Samples</div>
-                            <p>My samples from the Daily UX Writing Challenge, with explanations and designs created with Figma.</p>
-                            <a class="repo-btn" onclick="location.href='uxwritingsamples.html'">View Samples</a>
+                        <div class="proj-pic-main">
+                            <img src="assets/Dashboardpreview.png" class="proj-pic"> 
+                        </div>
+                        <div class="proj-text-main">
+                            <div class="proj-text">
+                                <div class="proj-title">Work Injury Dashboard</div>
+                                <p>PowerBI Dashboard.</p>
+                                <a class="repo-btn" onclick="location.href='uxwritingsamples.html'">View Dashboard</a>
+                            </div>
                         </div>
                     </div>
+                
                 </div>
-
         </div>
 
         <!--Footer -->
