--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     <div class="proj-text-main">
                         <div class="proj-text">
                             <div class="proj-title">Technical Writing Samples</div>
-                            <p>Technical writing and other additional samples to showcase my writing skillset.</p>
+                            <p>Technical writing samples to showcase my writing skillset.</p>
                             <a class="repo-btn" href='techwritingsamples.html'>View Samples</a>
                         </div>
                     </div>
