--- a/uxwritingsamples.html
+++ b/uxwritingsamples.html
@@ -5,8 +5,8 @@
     </head>
 
 
-    <body>
-        <h1>Samples from the Daily UX Writing Challenge</h1>
+    <body id="samples">
+        <h1>UX Writing Samples</h1>
         <p>Test</p>
         <img class="UXsamples" title="day 1" src="assets/UXWritingChallenge/Day 1.png">
         <img class="UXsamples" title="day 2" src="assets/UXWritingChallenge/Day 2.png">
