--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </div>                
         </div>
 
-        <span class="anchor" id="abt"></span>
+        <span class="anchor" id="about"></span>
 
         <!--About-->
         <div class="container-fluid" id="about">
@@ -75,7 +75,7 @@
             </div>  
         </div>
 
-        <span class="anchor" id="exp"></span>
+        <span class="anchor" id="experience"></span>
 
         <!--Experience-->
         <div class="container-fluid py-2" id="experience">
