Added data analytics page, minor design changes

--- a/uxwritingsamples.html
+++ b/uxwritingsamples.html
@@ -5,7 +5,7 @@
     </head>
 
 
-    <body id="samples">
+    <body id="uxwriting">
         <h1>UX Writing Samples</h1>
         <p>Test</p>
         <img class="UXsamples" title="day 1" src="assets/UXWritingChallenge/Day 1.png">
