--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="nav navbar-nav">
                         <li class= "nav-item">
-                            <a class="nav-link mx-3" href="#abt">ABOUT</a>
+                            <a class="nav-link mx-3" href="#about">ABOUT</a>
                         </li>
                         <li class= "nav-item">
-                            <a class="nav-link mx-3" href="#exp">EXPERIENCE</a>
+                            <a class="nav-link mx-3" href="#experience">EXPERIENCE</a>
                         </li>
                         <li class= "nav-item">
-                            <a class="nav-link mx-3" href="#port">PORTFOLIO</a>
+                            <a class="nav-link mx-3" href="#portfolio">PORTFOLIO</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link mx-3" href="#contact">CONTACT</a>
@@ -66,7 +66,7 @@
         <span class="anchor" id="about"></span>
 
         <!--About-->
-        <div class="container-fluid" id="about">
+        <div class="container-fluid" id="abt">
             <img src="assets/pic.jpg" id="my-pic">
             <h1 id="about-title" alt="A picture of Jenny Pero">About Me</h1>  
             <div id="about-desc">
@@ -78,7 +78,7 @@
         <span class="anchor" id="experience"></span>
 
         <!--Experience-->
-        <div class="container-fluid py-2" id="experience">
+        <div class="container-fluid py-2" id="exp">
             <h1 class="exp-proj-title">Experience</h1>
             <div id="ennovar-exp">
                 <h2 class="exp-title">Student IT Contractor - Ennovar</h2>
@@ -105,7 +105,7 @@
             </div>
         </div>
 
-        <span class="anchor" id="port"></span>
+        <span class="anchor" id="portfolio"></span>
 
         <!--Portfolio-->
         <div class="container-fluid" id="projects">
@@ -154,7 +154,7 @@
                     </div>
 
                     <!-- Total -->
-                    <div class="proj">
+                    <!--  <div class="proj">
                         <div class="proj-pic-main">
                             <img src="assets/math-symbols-in-orange-urukb380ueajtbvp-urukb380ueajtbvp.jpg" class="proj-pic">
                         </div>
@@ -165,7 +165,7 @@
                                 <a class="repo-btn" href='https://github.com/jennycpero/Total'>View GitHub</a>
                             </div>
                         </div>  
-                    </div>
+                    </div> -->
 
                     <!-- Popeyes Location Scraper -->
                     <div class="proj">
@@ -182,7 +182,7 @@
                     </div>
 
                     <!-- Portfolio Website -->
-                    <div class="proj">
+                    <!-- <div class="proj">
                         <div class="proj-pic-main">
                             <img src="assets/portfolio-web.png" class="proj-pic">
                         </div>
@@ -193,20 +193,18 @@
                                 <a class="repo-btn" href='https://github.com/jennycpero/Portfolio-Website'>View GitHub</a>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 
                 </div>
         </div>
 
         <!--Footer -->
         <div class="navbar mt-5" id="contact">
-            <h3>Like what you see? Then connect with me.</h3>
+            <h3>Like what you see? Then connect with me!</h3>
             <div class="socials">
                 <a tag="LinkedIn" title="LinkedIn" href="https://www.linkedin.com/in/jennifer-pero/" target="_blank" class="fa fa-linkedin"></a>
                 <a tag="GitHub" title="GitHub" href="https://github.com/jennycpero" target="_blank" class="fa fa-github"></a>
-                <a tag="Email" title="Email" href="mailto:jennycpero@gmail.com#" target="_blank" class="fa fa-envelope"></a>
             </div>
-            <p id="host-credit">This website is hosted by Infinity Free.</p>
         </div>
     </body>
 </html>
