--- a/techwritingsamples.html
+++ b/techwritingsamples.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
 
-    <body id="samples">
+    <body id="techwriting">
         <h1>Technical Writing Samples</h1>
     </body>
 </html>
