add new logo, new background

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="style.css">
         <script src="jcp.js"></script>
         <meta charset="utf-8">
-        <link rel="icon" href="assets/JPlogo.png" type="image/icon type">
+        <link rel="icon" href="assets/newlogo.png" type="image/icon type">
 
         <!--for bootstrap-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -28,26 +28,21 @@
 
     <body>
         <!--Navigation-->
-        <nav class="navbar navbar-expand-md fixed-top navbar-dark px-3">
-            <a class="navbar-brand" href="#">Jenny Pero</a>
-            
+        <nav class="navbar navbar-expand-md navbar-dark px-3">            
             <button type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" class="navbar-toggler" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
-            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+            <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                     <ul class="nav navbar-nav">
                         <li class= "nav-item">
-                            <a class="nav-link mx-3" href="#about">ABOUT</a>
+                            <a class="nav-link mx-4" href="#about">ABOUT</a>
                         </li>
                         <li class= "nav-item">
-                            <a class="nav-link mx-3" href="#experience">EXPERIENCE</a>
+                            <a class="nav-link mx-4" href="#experience">EXPERIENCE</a>
                         </li>
                         <li class= "nav-item">
-                            <a class="nav-link mx-3" href="#portfolio">PORTFOLIO</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link mx-3" href="#contact">CONTACT</a>
+                            <a class="nav-link mx-4" href="#projects">PROJECTS</a>
                         </li>
                     </ul>
                 </div>
@@ -57,15 +52,14 @@
         <!--Home/Hero-Section-->
         <div class="container-fluid" id="hero-home">
             <div id="hero-section">
-                <div id="hero-head">Hi, I'm Jenny!</div>
-                <p id="hero-text">Aspiring technical writer and data analyst.</p>
-                <a id="resume" href="assets/Resume - Jennifer Pero.pdf" download>Download Resume</a>
+                <div id="hero-header">Data Analytics</div>
+                <p id="hero-text">Whatever you need, I've got you covered.</p>
             </div>                
         </div>
 
         <span class="anchor" id="about"></span>
 
-        <!--About-->
+        <!--About. Include resume here -->
         <div class="container-fluid" id="abt">
             <img src="assets/pic.jpg" id="my-pic">
             <h1 id="about-title" alt="A picture of Jenny Pero">About Me</h1>  
@@ -105,11 +99,11 @@
             </div>
         </div>
 
-        <span class="anchor" id="portfolio"></span>
+        <span class="anchor" id="projects"></span>
 
-        <!--Portfolio-->
+        <!--Projects-->
         <div class="container-fluid" id="projects">
-            <h1 class="exp-proj-title">Portfolio</h1>
+            <h1 class="exp-proj-title">Projects</h1>
                 <div class="all-projects my-2">
                     <!--- UX Writing Samples -->
                     <div class="proj">
@@ -200,7 +194,7 @@
 
         <!--Footer -->
         <div class="navbar mt-5" id="contact">
-            <h3>Like what you see? Then connect with me!</h3>
+            <h4>Like what you see? Then connect with me!</h4>
             <div class="socials">
                 <a tag="LinkedIn" title="LinkedIn" href="https://www.linkedin.com/in/jennifer-pero/" target="_blank" class="fa fa-linkedin"></a>
                 <a tag="GitHub" title="GitHub" href="https://github.com/jennycpero" target="_blank" class="fa fa-github"></a>
