Added script file, made room for skills and resume sections

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <script src="jcp.js"></script>
         <meta charset="utf-8">
         <link rel="icon" href="assets/newlogo.png" type="image/icon type">
+        <script src="script.js"></script>
 
         <!--for bootstrap-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,13 +18,10 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.bundle.js"></script>
 
-        <!-- fonts-->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Zen+Antique&display=swap" rel="stylesheet">
-
         <!--Social media icons-->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
     </head>
 
     <body>
@@ -105,6 +103,13 @@
                     </ul>
                 </ul>
             </div>
+        </div>
+
+        
+        <!-- Skills -->
+        <span class="anchor" id="skills"></span>
+        <div class="container-fluid" id="resm">
+            <h3>Skills</h3>
         </div>
 
         <span class="anchor" id="projects"></span>
@@ -200,13 +205,20 @@
                 </div>
         </div>
 
+        <span class="anchor" id="resume"></span>
+
+        <!-- Resume -->
+        <div class="container-fluid" id="resm">
+            <h3>Before you leave, take my resume!</h3>
+        </div>
+
         <!--Footer -->
-        <div class="navbar navbar-dark mt-5" id="contact">
+         <div class="navbar navbar-dark mt-5" id="contact">
             <h6>Like what you see? Then connect with me!</h6>
             <div class="socials">
                 <a tag="LinkedIn" title="LinkedIn" href="https://www.linkedin.com/in/jennifer-pero/" target="_blank" class="fa fa-linkedin"></a>
                 <a tag="GitHub" title="GitHub" href="https://github.com/jennycpero" target="_blank" class="fa fa-github"></a>
             </div>
-        </div>
+        </div> 
     </body>
 </html>
