finished experience section

--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
 
         <!--About. Include resume here -->
         <div  id="abt">
-
             <div id="abt-card">
                 <img src='assets/jennyCropped.JPG' id='abt-pic'>
                 <div id='abt-text'>
@@ -78,30 +77,29 @@
         <span class="anchor" id="experience"></span>
 
         <!--Experience-->
-        <div class="container-fluid py-2" id="exp">
-            <h1 class="exp-proj-title">Experience</h1>
-            <div id="ennovar-exp">
-                <h2 class="exp-title">Student IT Contractor - Ennovar</h2>
-                <p class="exp-date">August 2021-present</p>
-                <ul>
-                    <li class="position-title">Robotics Process Automation Analyst (September 2022 – present)</li>
+        <div class='container' id="exp">
+            <h1 class="experience-title">Experience</h1>
+            <div id="exp-timeline">
+                <div class="ennovar">
+                    <h2 class="exp-title"> <span class="bigbullet">&#11044;</span> Student IT Contractor - Ennovar</h2>
+                    <p class="exp-date">August 2021-present | Wichita, KS </p>
+                    <p id="desc"> Assigned multiple opportunities IT, data analytics, and technical writing at Textron Aviation. Some of my projects and roles include the following:</p>
                     <ul>
-                        <li>Developing software bots and conducting data analysis with Ennovar’s new RPA team. </li>
+                        <li>Producing documentation and assisting with PowerBI tickets for the IT Data & Analytics team.</li>
+                        <li>Redesigned and troubleshooted the ticket metrics for the Help Hangar.</li>
+                        <li>Provided IT assistance for Textron Aviation employees at the West Help Hangar, including password resets, laptop setup, and software installations and updates.</li>
+                        <li>Processed Change of Status requests and performed data entry and other research and archival duties for the HR Compensation team.</li>
                     </ul>
-
-                    <li class="position-title">HR Compensation Support - Textron Aviation (March 2022 – August 2022)</li>
+                </div>
+                <div class="intrust">
+                    <h2 class="exp-title"> <span class="bigbullet">&#11044;</span> Technology Intern - INTRUST Bank</h2>
+                    <p class="exp-date">May 2023 - August 2023 | Wichita, KS </p>
                     <ul>
-                        <li>Cleaned and audited the salary and employee data used by Textron Aviation’s Compensation team. </li>
-                        <li>Approved Change of Status requests through Outlook.</li>
-                        <li>Conducted salary bench marking research.</li>
+                        <li>Producing documentation and assisting with PowerBI tickets for the IT Data & Analytics team.</li>
+                        <li>Redesigned and troubleshooted the ticket metrics for the Help Hangar.</li>
+                        <li>Provided IT assistance for Textron Aviation employees at the West Help Hangar, including password resets, laptop setup, and software installations and updates.</li>
                     </ul>
-                    <li class="position-title">Level 1 IT Support Technician – Textron Aviation (August 2021 – February 2022)</li>
-                    <ul>
-                        <li>Worked face-to-face with Textron Aviation employees needing IT support. Common issues included resetting passwords, setting up new laptops and phones, re-imaging laptops, and installing or troubleshooting software and hardware.</li>
-                        <li>Documented the resolution process of each interaction via ServiceNow’s ticketing tool. </li>
-                        <li>Improved the visualization and structure of the Help Hangar ticket metrics in Google Sheets.</li>
-                    </ul>
-                </ul>
+                </div>
             </div>
         </div>
 
