Removed skills section

--- a/index.html
+++ b/index.html
@@ -41,9 +41,6 @@
                                 <a class="nav-link mx-4" href="#experience">EXPERIENCE</a>
                             </li>
                             <li class= "nav-item">
-                                <a class="nav-link mx-4" href="#skills">SKILLS</a>
-                            </li>
-                            <li class= "nav-item">
                                 <a class="nav-link mx-4" href="#projects">PROJECTS</a>
                             </li>
                             <li class= "nav-item">
@@ -78,7 +75,7 @@
 
         <!--Experience-->
         <div class='container' id="exp">
-            <h1 class="experience-title">Experience</h1>
+            <h1 class="section-title">My Experience</h1>
             <div id="exp-timeline">
                 <div class="ennovar">
                     <h2 class="exp-title"> <span class="bigbullet">&#11044;</span> Student IT Contractor - Ennovar</h2>
@@ -102,19 +99,13 @@
                 </div>
             </div>
         </div>
-
         
-        <!-- Skills -->
-        <span class="anchor" id="skills"></span>
-        <div class="container-fluid" id="resm">
-            <h3>Skills</h3>
-        </div>
-
         <span class="anchor" id="projects"></span>
 
         <!--Projects-->
+        <!-- data analytics, technical writing, UX writing, web development, other programming projects-->
         <div class="container-fluid" id="projects">
-            <h1 class="exp-proj-title">Projects</h1>
+            <h1 class="section-title">Projects</h1>
                 <div class="all-projects my-2">
                     <!--- UX Writing Samples -->
                     <div class="proj">
