--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <head>
         <title>Jenny Pero</title>
         <link rel="stylesheet" href="style.css">
-        <script src="jcp.js"></script>
         <meta charset="utf-8">
         <link rel="icon" href="assets/newlogo.png" type="image/icon type">
         <script src="script.js"></script>
@@ -38,9 +37,6 @@
                                 <a class="nav-link mx-4" href="#about">ABOUT</a>
                             </li>
                             <li class= "nav-item">
-                                <a class="nav-link mx-4" href="#experience">EXPERIENCE</a>
-                            </li>
-                            <li class= "nav-item">
                                 <a class="nav-link mx-4" href="#projects">PROJECTS</a>
                             </li>
                             <li class= "nav-item">
@@ -52,7 +48,7 @@
 
         <!--Home/Hero-Section-->
             <div id="hero-section">
-                <div id="hero-header">Data Analytics</div>
+                <div id="hero-header"></div>
                 <p id="hero-text">Whatever you need, I've got you covered.</p>
             </div>                
         </div>
@@ -66,37 +62,8 @@
                 <div id='abt-text'>
                     <h5>Hi, I'm Jenny!</h5>
                     <p>I'm a senior Computer Science student at Wichita State University looking for internships in data analytics, technical writing, or UX writing.</p>
-                    <p>All of these roles combine my passion for storytelling, content design, and research with my interest in tech and programming.</p>
+                    <p>All of these roles combine my passion for storytelling, design, and research with my interest in tech and programming.</p>
                 </div> 
-            </div>
-        </div>
-
-        <span class="anchor" id="experience"></span>
-
-        <!--Experience-->
-        <div class='container' id="exp">
-            <h1 class="section-title">My Experience</h1>
-            <div id="exp-timeline">
-                <div class="ennovar">
-                    <h2 class="exp-title"> <span class="bigbullet">&#11044;</span> Student IT Contractor - Ennovar</h2>
-                    <p class="exp-date">August 2021-present | Wichita, KS </p>
-                    <p id="desc"> Assigned multiple opportunities IT, data analytics, and technical writing at Textron Aviation. Some of my projects and roles include the following:</p>
-                    <ul>
-                        <li>Producing documentation and assisting with PowerBI tickets for the IT Data & Analytics team.</li>
-                        <li>Redesigned and troubleshooted the ticket metrics for the Help Hangar.</li>
-                        <li>Provided IT assistance for Textron Aviation employees at the West Help Hangar, including password resets, laptop setup, and software installations and updates.</li>
-                        <li>Processed Change of Status requests and performed data entry and other research and archival duties for the HR Compensation team.</li>
-                    </ul>
-                </div>
-                <div class="intrust">
-                    <h2 class="exp-title"> <span class="bigbullet">&#11044;</span> Technology Intern - INTRUST Bank</h2>
-                    <p class="exp-date">May 2023 - August 2023 | Wichita, KS </p>
-                    <ul>
-                        <li>Producing documentation and assisting with PowerBI tickets for the IT Data & Analytics team.</li>
-                        <li>Redesigned and troubleshooted the ticket metrics for the Help Hangar.</li>
-                        <li>Provided IT assistance for Textron Aviation employees at the West Help Hangar, including password resets, laptop setup, and software installations and updates.</li>
-                    </ul>
-                </div>
             </div>
         </div>
         
@@ -198,7 +165,8 @@
 
         <!-- Resume -->
         <div class="container-fluid" id="resm">
-            <h3>Before you leave, take my resume!</h3>
+            <h3>Before you go, take my resume!</h3>
+            <p>Get details on my experience and skills. Save, share, and keep for later.</p>
         </div>
 
         <!--Footer -->
