Created multi text transition for hero page

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 
         <!--Home/Hero-Section-->
             <div id="hero-section">
-                <div id="hero-header"></div>
-                <p id="hero-text">Whatever you need, I've got you covered.</p>
+                <div id="hero-header">Data Analytics</div>
+                <p class="text-show" id="hero-text">Whatever you need, I've got you covered.</p>
             </div>                
         </div>
 
