Removed footer, put social media links in about card and recolored them

--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
                     <h5>Hi, I'm Jenny!</h5>
                     <p>I'm a senior Computer Science student at Wichita State University looking for internships in data analytics, technical writing, or UX writing.</p>
                     <p>All of these roles combine my passion for storytelling, design, and research with my interest in tech and programming.</p>
+                    <span class="socials">
+                        <a tag="LinkedIn" title="LinkedIn" href="https://www.linkedin.com/in/jennifer-pero/" target="_blank" class="fa fa-linkedin"></a>
+                        <a tag="GitHub" title="GitHub" href="https://github.com/jennycpero" target="_blank" class="fa fa-github"></a>
+                    </span>
                 </div> 
             </div>
         </div>
@@ -168,14 +172,5 @@
             <h3>Before you go, take my resume!</h3>
             <p>Get details on my experience and skills. Save, share, and keep for later.</p>
         </div>
-
-        <!--Footer -->
-         <div class="navbar navbar-dark mt-5" id="contact">
-            <h6>Like what you see? Then connect with me!</h6>
-            <div class="socials">
-                <a tag="LinkedIn" title="LinkedIn" href="https://www.linkedin.com/in/jennifer-pero/" target="_blank" class="fa fa-linkedin"></a>
-                <a tag="GitHub" title="GitHub" href="https://github.com/jennycpero" target="_blank" class="fa fa-github"></a>
-            </div>
-        </div> 
     </body>
 </html>
