Redesigned project cards, redid links

--- a/index.html
+++ b/index.html
@@ -73,55 +73,64 @@
         <div id="projects">
             <div id="proj-intro">
                 <h1 class="section-title">See my projects</h1>
-                <h5 id="proj-desc">Pick a category to see what I've been working on.</h5>
+                <h5 id="proj-desc">Take a peek at what I've been working on.</h5>
             </div>
-            <div id="project-categories container-fluid">
-                    <div class="proj-cat" id="da">
+            <div id="project-categories">
+                    <div class="proj-cat" style="background: #af4b4b">
                         <div class="proj-head">
                             <h4>Data Analytics</h4>
                             <h5>Visualizations, analysis, and web scraping.</h5>
                         </div>
                     </div>
-                    <div class ="all-projects" id="da">
+                    <div class ="all-projects" style="background: #af4b4b">
                         <div class="proj">
                             <div class="proj-pic-main">
-                            <img src="assets/Dashboardpreview.png" class="proj-pic"> 
+                            <img src="assets/workinjurypowerbi.png" class="proj-pic"> 
                             </div>
                             <div class="proj-text-main">
                                 <div class="proj-title">Work Injury Power BI Dashboard</div>
-                                <p>Fake work injury plant dataset turned into a stunning and interactive PowerBI Dashboard.</p>
-                                <a class="view-btn" href='https://app.powerbi.com/view?r=eyJrIjoiMTc4ODk1MmYtMjFhZi00Zjc1LTkyYTAtZjdjZDU3MzRiOTVhIiwidCI6ImUwNWI2YjNmLTE5ODAtNGIyNC04NjM3LTU4MDc3MWY0NGRlZSIsImMiOjN9'>Open Dashboard</a>
+                                <p>Interactive dashboard reporting work injury metrics for a fake power plant company.</p>
+                                <a class="view-btn" href='https://app.powerbi.com/view?r=eyJrIjoiMTc4ODk1MmYtMjFhZi00Zjc1LTkyYTAtZjdjZDU3MzRiOTVhIiwidCI6ImUwNWI2YjNmLTE5ODAtNGIyNC04NjM3LTU4MDc3MWY0NGRlZSIsImMiOjN9' target="_blank">View Dashboard</a>
                             </div>
                         </div>
+
+                        <div class="proj">
+                            <div class="proj-pic-main">
+                            <img src="assets/tableaudash.png" class="proj-pic"> 
+                            </div>
+                            <div class="proj-text-main">
+                                <div class="proj-title">Ticket Metrics Tableau Dashboard</div>
+                                <p>Interactive dashboard reporting fake 2020 help desk ticket metrics.</p>
+                                <a class="view-btn" href='https://public.tableau.com/views/HelpDeskTicketMetrics2020/HelpDeskMetrics2020?:language=en-US&:display_count=n&:origin=viz_share_link' target="_blank">View Dashboard</a>
+                            </div>
+                        </div>
+
                         <div class="proj">
                             <div class="proj-pic-main">
                                 <img src="assets/popeyes-pic.png" class="proj-pic">
                             </div>
                                 <div class="proj-text-main">
-                                    <div class="proj-text">
-                                        <div class="proj-title">Popeyes Locations Scraper</div>
-                                            <p>Web scrapes US Popeyes locations and compiles it into a csv file using Python.</p>
-                                            <a class="view-btn" href='https://github.com/jennycpero/Popeyes-Locations' target="_blank">View GitHub Repository</a>
+                                    <div class="proj-title">Popeyes Locations Scraper</div>
+                                        <p>Web scrapes US Popeyes locations and compiles it into a csv file using Python.</p>
+                                        <a class="view-btn" href='https://github.com/jennycpero/Popeyes-Locations' target="_blank">View GitHub Repository</a>
                                     </div>
-                                </div>
+
                         </div>
                     </div>
 
-                    <div class="proj-cat" id="tw">
+                    <div class="proj-cat" style="background-color: rgb(45, 114, 45); text-align: right;">
                         <h4>Technical Writing and UX Writing</h4>
                         <h5>Instructions, reports, and microcopy.</h5>
                     </div>
-                    <div class="all-projects" id="tw">
+                    <div class="all-projects" style="background-color: rgb(45, 114, 45)">
                         <div class="proj">
                             <div class="proj-pic-main">
-                                <img src="assets/Day 10 preview.png" class="proj-pic"> 
+                                <img src="assets/Day 10 preview.png" class="proj-pic">
                             </div>
                             <div class="proj-text-main">
-                                <div class="proj-text">
-                                    <div class="proj-title">UX Writing Samples</div>
-                                    <p>Samples from the Daily UX Writing Challenge, with explanations and Figma mockups.</p>
-                                    <a class="view-btn" href='uxwritingsamples.html'>View Samples</a>
-                                </div>
+                                <div class="proj-title">UX Writing Samples</div>
+                                <p>Samples from the Daily UX Writing Challenge, with explanations and Figma mockups.</p>
+                                <a class="view-btn" href='uxwritingsamples.html'>View Samples</a>
                             </div>
                         </div>
                         <div class="proj">
@@ -129,21 +138,19 @@
                         <img src="assets/techwritingpreview.png" class="proj-pic"> 
                     </div>
                         <div class="proj-text-main">
-                            <div class="proj-text">
-                                <div class="proj-title">Technical Writing Samples</div>
-                                <p>Technical writing samples to showcase my writing skillset.</p>
-                                <a class="view-btn" href='techwritingsamples.html'>View Samples</a>
-                            </div>
+                            <div class="proj-title">Technical Writing Samples</div>
+                            <p>Technical writing samples to showcase my writing skillset.</p>
+                            <a class="view-btn" href='techwritingsamples.html'>View Samples</a>
                         </div>
                         </div> 
                     </div>
 
-                    <div class="proj-cat" id="webd">
+                    <div class="proj-cat" style="background-color: rgb(67, 134, 161);">
                         <h4>Web Development</h4>
                         <h5>Sample websites that don't involve analytics.</h5>
                     </div>
-                    <div class="all-projects" id="webd">
-
+                    <div class="all-projects" style="background-color: rgb(67, 134, 161);">
+                        <p>Don't see any projects around here yet. Check back soon or look at another category!</p>
                     </div>
             </div>           
         </div>
